update wood swagger
